# libpartsexplorer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  variables.mk
glade/: Pecan.glade
gtk3/: main_window.glade  pecan.gresource.xml
src/: CMakeLists.txt  attribute.c  attribute.h  blob.c  blob.h  error.c  error.h  fileutils.c  fileutils.h  main.c  parser.c  parser.h  partsexplorer.c  partsexplorer.h  pecan.c  pecan.h
src/gtk/: app.c  app.h
src/win32/: AboutDlg.cpp  AboutDlg.h  DetailView.cpp  DetailView.h  Image.cpp  Image.h  MainWindow.cpp  MainWindow.h  MsgBoxes.c  MsgBoxes.cpp  MsgBoxes.h  StringUtils.c  StringUtils.h  TempFileUtils.c  TempFileUtils.h  UIManager.cpp  UIManager.h  WinPecan.cpp  WinPecan.h  main.cpp  main.h  stdafx.cpp  stdafx.h
test/: CMakeLists.txt  main.c
win32/: Pecan.rc  Pecan.vcxproj  Pecan.vcxproj.filters  ReadMe.txt  Resource.h
win32/Pecan/: Pecan.cpp  Pecan.sln  Pecan.vcxproj  Pecan.vcxproj.filters  Resource.h  stdafx.h
windows/Pecan/: Pecan.rc  Pecan.sln  Pecan.vcproj
